--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-    "name": "twoenglishes",
-    "version": "1.0.0",
-    "dependencies": {
-        "express": "2.4.6",
-        "jade": "0.16.1",
-        "stylus": "0.16.0"
-    }
+  "name": "twoenglishes",
+  "version": "1.0.0",
+  "dependencies": {
+    "express": "~2.5.2",
+    "jade": "~0.19.0",
+    "stylus": "~0.20.1"
+  }
 }
